<resources>
    <string name="app_name">VisitShop</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登  录</string>
    <string name="loading">正在登录...</string>
    <string name="login_name_psd_failure_toast">用户名或者密码错误，登录失败</string>
    <string name="login_network_error">服务器连接异常</string>

    <string name="tab_main">首页</string>
    <string name="tab_shop">巡店</string>
    <string name="tab_visit">拜访</string>
    <string name="tab_train">培训</string>
    <string name="tab_me">个人中心</string>

    <!-- Setting item -->
    <string name="setting_item_me">个人资料</string>
    <string name="setting_item_clear">清除缓存</string>
    <string name="setting_item_idea">意见反馈</string>
    <string name="setting_item_about">关于APP</string>
    <string name="setting_item_check">新版本检测</string>
    <string name="setting_item_exit">退出应用</string>

</resources>
