<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/color_bottom_layout_bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/tab_padding"
        android:paddingTop="@dimen/tab_padding">

        <ImageView
            android:id="@+id/home_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/menu_home_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/tab_main"
            android:textColor="@color/main_tab_text"
            android:textSize="@dimen/tab_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/tab_padding"
        android:paddingTop="@dimen/tab_padding">

        <ImageView
            android:id="@+id/shop_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/menu_shop_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shop_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/tab_shop"
            android:textColor="@color/main_tab_text"
            android:textSize="@dimen/tab_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/tab_padding"
        android:paddingTop="@dimen/tab_padding">

        <ImageView
            android:id="@+id/visit_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/menu_visit_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visit_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/tab_visit"
            android:textColor="@color/main_tab_text"
            android:textSize="@dimen/tab_text_size" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/tab_padding"
        android:paddingTop="@dimen/tab_padding">

        <ImageView
            android:id="@+id/train_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/menu_train_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/train_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/tab_train"
            android:textColor="@color/main_tab_text"
            android:textSize="@dimen/tab_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/tab_padding"
        android:paddingTop="@dimen/tab_padding">

        <ImageView
            android:id="@+id/me_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/menu_me_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/me_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/tab_me"
            android:textColor="@color/main_tab_text"
            android:textSize="@dimen/tab_text_size" />
    </RelativeLayout>



</LinearLayout>