<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_logo"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edit_margintop"
                android:layout_marginLeft="@dimen/login_edit_marginleft"
                android:layout_marginRight="@dimen/login_edit_marginright">
                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login_name_hint"
                    android:textColorHint="@color/login_edit_hint"
                    android:textSize="@dimen/login_edit_hint"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/psd_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edit_margintop"
                android:layout_marginLeft="@dimen/login_edit_marginleft"
                android:layout_marginRight="@dimen/login_edit_marginright">
                <EditText
                    android:id="@+id/pwd_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/login_password_hint"
                    android:textColorHint="@color/login_edit_hint"
                    android:textSize="@dimen/login_edit_hint"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/login_btn_margin_left"
                android:layout_marginRight="@dimen/login_btn_margin_right"
                android:layout_marginTop="@dimen/login_btn_margin_top"
                android:background="@drawable/login_button_background"
                android:text="@string/login"
                android:textColor="@color/login_background"
                android:textSize="@dimen/login_edit_hint"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/loading_include"
        layout="@layout/view_login_loading"
        android:visibility="gone"/>
</RelativeLayout>